--- a/index.html
+++ b/index.html
@@ -117,27 +117,26 @@
     }
 
     button {
-  background-color: #d79df8;
-  color: white;
-  border: none;
-  padding: 12px 24px;
-  border-radius: 8px;
-  font-size: 16px;
-  font-weight: 600;
-  cursor: pointer;
-  transition: background-color 0.3s ease, transform 0.2s ease;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
+      background-color: #d79df8;
+      color: white;
+      border: none;
+      padding: 12px 24px;
+      border-radius: 8px;
+      font-size: 16px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
 
-button:hover {
-  background-color: #efccfb;
-  transform: translateY(-2px);
-}
+    button:hover {
+      background-color: #efccfb;
+      transform: translateY(-2px);
+    }
 
-button:active {
-  transform: scale(0.98);
-}
-
+    button:active {
+      transform: scale(0.98);
+    }
   </style>
 </head>
 
@@ -174,15 +173,15 @@ button:active {
   <div id="booster" class="section">
     <h2>Boost Me With Images</h2>
     <button onclick="showBoosterImage()">Show Image</button>
-<div style="display: flex; justify-content: center; margin-top: 15px;">
-  <div id="booster-output"></div>
-</div>
+    <div style="display: flex; justify-content: center; margin-top: 15px;">
+      <div id="booster-output"></div>
+    </div>
 
   </div>
 
   <!-- Playlist -->
   <div id="playlist" class="section">
-    <h2>Cheer-Up Playlist</h2>
+    <h2>Chill Playlist</h2>
     <button onclick="showPlaylist()">Next Song</button>
     <iframe id="playlist-frame" src="" allowfullscreen></iframe>
   </div>
@@ -191,7 +190,7 @@ button:active {
   <div id="animals" class="section">
     <h2>Need Some Cuteness?</h2>
     <button onclick="showAnimal()">Show Me an Animal</button>
-    <div><img id="animal-img" src=""/></div>
+    <div><img id="animal-img" src="" /></div>
   </div>
 
   <script>
@@ -217,21 +216,16 @@ button:active {
     const animalImages = Array.from({ length: 8 }, (_, i) => `images/animal${i + 1}.jpg`);
 
     const playlists = [
-      "https://www.youtube.com/embed/2Vv-BfVoq4g",
-      "https://www.youtube.com/embed/kXYiU_JCYtU",
-      "https://www.youtube.com/embed/fLexgOxsZu0",
-      "https://www.youtube.com/embed/8xg3vE8Ie_E",
-      "https://www.youtube.com/embed/JGwWNGJdvx8",
-      "https://www.youtube.com/embed/ScNNfyq3d_w",
-      "https://www.youtube.com/embed/LsoLEjrDogU",
-      "https://www.youtube.com/embed/OPf0YbXqDm0",
-      "https://www.youtube.com/embed/pRpeEdMmmQ0",
-      "https://www.youtube.com/embed/KQ6zr6kCPj8",
-      "https://www.youtube.com/embed/ru0K8uYEZWw",
-      "https://www.youtube.com/embed/U9BwWKXjVaI",
-      "https://www.youtube.com/embed/d-diB65scQU",
-      "https://www.youtube.com/embed/CevxZvSJLk8",
-      "https://www.youtube.com/embed/09R8_2nJtjg"
+      "https://www.youtube.com/embed/7qpnjZ4D0xk", // Noh Salleh – Angin Kencang
+      "https://www.youtube.com/embed/GrggIhzD_s0", // Insomniacks – Pulang
+      "https://www.youtube.com/embed/M9k3WaQhFtw", // Aizat Amdan – Sampai Ke Hari Tua
+      "https://www.youtube.com/embed/UZKDQZx9ZJU", // Lunadira – Stuck With You
+      "https://www.youtube.com/embed/3ZkI1eJ9rBg", // Pastel Lite – Hello Sayang
+      "https://www.youtube.com/embed/IZKZYdT7ZB0", // Fieya Julia – Perasaanku
+      "https://www.youtube.com/embed/UlRHPZgT8sM", // Amir Jahari – Hasrat
+      "https://www.youtube.com/embed/WacZ2V5HvnA", // Iqbal M. – Sempurna Waktu
+      "https://www.youtube.com/embed/RkF44nZmvuY", // Masdo – Bercanda Di Malam Indah
+      "https://www.youtube.com/embed/8t0v3X32gLg"  // LOKO – Kau VS Aku
     ];
 
     function showSection(id) {
